# STXETX-Host

./: .gitignore  CMakeLists.txt  README.md
include/: CRC.hpp  FrameEncoder.hpp  FrameParser.hpp  Logger.hpp  ReceiverThread.hpp  RingBuffer.hpp
src/: CRC.cpp  FrameEncoder.cpp  FrameParser.cpp  Logger.cpp  ReceiverThread.cpp  main.cpp  test_Main.cpp
tests/: CMakeLists.txt  test_CRC.cpp  test_FrameEncoder.cpp  test_FrameParser.cpp  test_Logger.cpp  test_RingBuffer.cpp  test_dummy.cpp
